--- a/scripts/install
+++ b/scripts/install
@@ -14,6 +14,8 @@ ynh_script_progression "Setting up source files..."
 
 ynh_setup_source --dest_dir="$install_dir"
 
+chmod +x "$install_dir/commafeed"
+
 #=================================================
 # SYSTEM CONFIGURATION
 #=================================================
